--- a/db/docker-compose.yaml
+++ b/db/docker-compose.yaml
@@ -61,8 +61,5 @@ volumes:
 
 networks:
   backend_network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.18.0.0/24
+     external: true
     
